--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,97 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+html {
+    font-size: 62.5%;
+}
+
 .App {
- max-width: 400px;
- margin: 40px auto
+ max-width: 45rem;
+ margin: 4rem auto;
+ font-family: sans-serif;
+ font-size: 1.6rem;
+ padding: 0 1.5rem
+}
+.title {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+    text-transform: capitalize;
+}
+button {
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+button:disabled {
+    filter: opacity(.66);
+}
+.btn {
+    border: none;
+    outline: none;
+    border-radius: .3rem;
+    width: 100%;
+    height: 4.4rem;
+    text-align: center;
+    padding: 0 1.8rem;
+    cursor: pointer;
+    background-color: royalblue;
+    color: #fff;
+    font-size: 1.6rem;
+    transition: .25s ease;
+}
+.btn:hover {
+    box-shadow: 0px .3px 4px rgba(0,0,0,.09);
+}
+.setup textarea {
+    outline: none;
+    border: 1px solid #ddd;
+    padding: 1rem;
+    border-radius: .3rem;
+    height: 30rem;
+    font-size: 1.6rem;
+    display: block;
+    width: 100%;
+    font-family: sans-serif;
+    margin-bottom: .75rem;
+}
+.setup textarea:focus {
+    border-color: royalblue;
+}
+.input-range {
+    margin-bottom: 2.5rem;
+}
+.input-range input {
+    width: 100%;
+    display: inline-block;
+    margin-bottom: 2px;
+}
+.input-range p {
+    text-align: center;
+}
+.controls {
+    display: flex;
+    margin-top: 4rem;
+}
+
+.controls button {
+    flex: 1;
+    padding: .8rem .5rem;
+    font-size: 1.5rem;
+    border: 1px solid #ccc;
+}
+.controls button:nth-child(2) {
+    border-left: none;
+    border-right: none;
+}
+.screen {
+    height: 20rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid lightgreen;
+    margin: 2rem 0;
+    font-size: 2.5rem;
+    background-color: #fff;
 }
