--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ html {
     font-size: 2.5rem;
     margin-bottom: 2rem;
     text-transform: capitalize;
+    text-align: center;
 }
 button {
     border: none;
